# SBC_RobotMecanum

./: .gitignore  COLCON_IGNORE  COMPILATION_SUCCESS.md  INSTALLATION_SUCCESS.md  QUICK_START.md  README.md  launch_lidar.sh  launch_simulation.md
config/: mecanum_robot.rviz
scripts/: install_monitoring.sh  install_monitoring_old.sh  install_robot.sh  launch_both.sh  launch_gazebo.sh  launch_rviz.sh  rviz_direct.sh  test_project.sh  test_simplified_config.sh
src/mecanum_robot/: CMakeLists.txt  package.xml
src/mecanum_robot/config/: mecanum_robot.rviz  robot_config.yaml  rplidar_config.yaml
src/mecanum_robot/launch/: console_monitoring_launch.py  gazebo_launch.py  lidar_launch.py  monitoring_launch.py  robot_launch.py  rviz_launch.py
src/mecanum_robot/mecanum_robot/: __init__.py  communication_bridge.py  console_monitor.py  lidar_processor.py  remote_monitor.py  robot_controller.py
src/mecanum_robot/msg/: RobotStatus.msg  SensorData.msg
src/mecanum_robot/srv/: SetRobotMode.srv
src/mecanum_robot/urdf/: mecanum_robot.urdf.xacro
